--- a/SearchAlgorithmsLib/GUI/View/SettingsWindow.xaml
+++ b/SearchAlgorithmsLib/GUI/View/SettingsWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI.View"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="211" Width="300">
-    <Grid TextBlock.FontSize="14">
+        Title="SettingsWindow" Height="210" Width="360">
+    <Grid TextBlock.FontSize="14" Margin="0,0,0.333,5.333">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -20,6 +20,7 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
         <TextBlock>Server IP:</TextBlock>
         <TextBox x:Name="txtIP" Grid.Column="1" Text="{Binding ServerIP}"></TextBox>
         <TextBlock Grid.Row="1">Server Port:</TextBlock>
@@ -34,6 +35,7 @@
             <ComboBoxItem>DFS</ComboBoxItem>
         </ComboBox>
 
-        <Button x:Name="btnStart" Grid.Row="5" HorizontalAlignment="Center" Grid.ColumnSpan="2" Margin="5" Padding="5">Start Game</Button>
+        <Button x:Name="btnOK" Grid.Row="5" HorizontalAlignment="Left" Margin="1,20,0,0" Padding="5" Grid.Column="1" RenderTransformOrigin="-1.239,0.5" Width="78" Height="32" VerticalAlignment="Top" Click="btnOK_Click">OK</Button>
+        <Button x:Name="btnCancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,20,40.333,-0.667" Padding="5" Grid.Column="1" RenderTransformOrigin="1.203,0.344" Height="32" VerticalAlignment="Top" Click="btnCancel_Click" Width="78">Cancel</Button>
     </Grid>
 </Window>
