--- a/SearchAlgorithmsLib/GUI/View/SinglePlayerView.xaml
+++ b/SearchAlgorithmsLib/GUI/View/SinglePlayerView.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="GUI.View.SinglePlayerMenu"
+﻿<Window x:Class="GUI.View.SinglePlayerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI.View"
-        xmlns:controls="clr-namespace:GUI.Controls"
         mc:Ignorable="d"
-        Title="SinglePlayerMenu" Height="180" Width="350">
+        Title="SinglePlayerView" Height="700" Width="800">
     <Grid>
-        <controls:DefinePlay x:Name="definePlay" Loaded="definePlay_Loaded"/>
+        
     </Grid>
 </Window>
