--- a/SearchAlgorithmsLib/GUI/View/SinglePlayerMenu.xaml
+++ b/SearchAlgorithmsLib/GUI/View/SinglePlayerMenu.xaml
@@ -8,8 +8,8 @@
         mc:Ignorable="d"
         Title="SinglePlayerMenu" Height="180" Width="350">
     <Grid>
-        <!--<controls:DefinePlay x:Name="definePlay" Loaded="definePlay_Loaded" MazeNameString="{Binding MazeName}"/>-->
-        <local:De
-        
+        <controls:DefinePlay />
+
+
     </Grid>
 </Window>
