--- a/SearchAlgorithmsLib/GUI/Controls/DefinePlay.xaml
+++ b/SearchAlgorithmsLib/GUI/Controls/DefinePlay.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GUI.Controls"
-             mc:Ignorable="d" Height="150" Width="350">
-    <Grid TextBlock.FontSize="14" Margin="0,0,0,40">
+             mc:Ignorable="d" Height="105" Width="350">
+    <Grid TextBlock.FontSize="14">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
