--- a/SearchAlgorithmsLib/GUI/Controls/DefinePlay.xaml
+++ b/SearchAlgorithmsLib/GUI/Controls/DefinePlay.xaml
@@ -16,11 +16,11 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Padding="3" Margin="3">Maze name:</TextBlock>
-        <TextBox x:Name="txtMazeName" Grid.Column="2" Text="{Binding MazeName}" Padding="3" Margin="3"></TextBox>
+        <TextBox x:Name="txtMazeName" Grid.Column="2" Padding="3" Margin="3"></TextBox>
         <TextBlock Grid.Row="1" Padding="3" Margin="3">Maze rows:</TextBlock>
-        <TextBox x:Name="txtRows" Grid.Row="1" Grid.Column="2" Text="{Binding MazeRows}" Padding="3" Margin="3"></TextBox>
+        <TextBox x:Name="txtRows" Grid.Row="1" Grid.Column="2" Padding="3" Margin="3"></TextBox>
         <TextBlock Grid.Row="2" Padding="3" Margin="3">Maze columns:</TextBlock>
-        <TextBox x:Name="txtCols" Grid.Row="2" Grid.Column="2" Text="{Binding MazeCols}" Padding="3" Margin="3"></TextBox>
+        <TextBox x:Name="txtCols" Grid.Row="2" Grid.Column="2" Padding="3" Margin="3"></TextBox>
         <!--<Button x:Name="btnStart" Grid.Row="3" HorizontalAlignment="Center" Grid.ColumnSpan="2" Click="btnStart_Click" Margin="5" Padding="5">Start Game</Button>-->
     </Grid>
 </UserControl>
