--- a/SearchAlgorithmsLib/GUI/Controls/MazeControl.xaml
+++ b/SearchAlgorithmsLib/GUI/Controls/MazeControl.xaml
@@ -6,6 +6,10 @@
              xmlns:local="clr-namespace:GUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <ImageBrush x:Key="End" ImageSource="../Images/toilet.jpg"></ImageBrush>
+        <ImageBrush x:Key="Poo" ImageSource="../Images/poo.jpeg"></ImageBrush>
+    </UserControl.Resources>
     <Canvas Name="MazeBoard" Loaded="MazeBoardLoaded" KeyDown="MazeBoardKeyDown">
             
     </Canvas>
