--- a/SearchAlgorithmsLib/GUI/MainWindow.xaml
+++ b/SearchAlgorithmsLib/GUI/MainWindow.xaml
@@ -8,9 +8,9 @@
         Title="MainWindow" Height="346" Width="793.135">
     <StackPanel HorizontalAlignment="Center">
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Height="130" Width="173" RenderTransformOrigin="0.304,0.118" FontStyle="Italic" FontWeight="ExtraBlack" FontStretch="UltraExpanded" FontSize="30" Foreground="#FFE36000"><Run Text="THE"/><LineBreak/><Run Text="BEST"/><LineBreak/><Run Text="MAZE"/></TextBlock>
-        <Button Content="Single player" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="125" Height="50" FontSize="20" Click="Button_Click_2"/>
-        <Button Content="Multi player" HorizontalAlignment="Left" VerticalAlignment="Top" Width="125" Height="50" FontSize="20" Click="Button_Click_1"/>
-        <Button Content="Settings" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="125" Height="50" FontSize="20" Click="Button_Click"/>
+        <Button Content="Single player" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="125" Height="50" FontSize="20" Click="Button_Click_Single_Player"/>
+        <Button Content="Multi player" HorizontalAlignment="Left" VerticalAlignment="Top" Width="125" Height="50" FontSize="20" Click="Button_Click_Multi_Player"/>
+        <Button Content="Settings" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="125" Height="50" FontSize="20" Click="Button_Click_Settings"/>
 
 
     </StackPanel>
