--- a/SearchAlgorithmsLib/GUI/View/MultiPlayerMenu.xaml
+++ b/SearchAlgorithmsLib/GUI/View/MultiPlayerMenu.xaml
@@ -11,6 +11,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" MinWidth="105"/>
@@ -18,10 +20,11 @@
         </Grid.ColumnDefinitions>
 
         <TextBlock Padding="3" Margin="3,3,3,3.333">List of games:</TextBlock>
-        <ComboBox x:Name="gameList" HorizontalAlignment="Left" SelectedIndex="{Binding GameList}" IsEditable="False" Margin="105,0,0,0.333" Width="236" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnStart" Grid.Row="1" HorizontalAlignment="Center" Margin="30.667,4.667,136.333,77" Padding="5" Grid.Column="1">Join Game</Button>
-        <controls:DefinePlay HorizontalAlignment="Left" Height="150" Margin="3,60.667,0,-79.667" Grid.Row="1" VerticalAlignment="Top" Width="340" Grid.ColumnSpan="2"/>
+        <ComboBox x:Name="GameList" HorizontalAlignment="Left" SelectedIndex="{Binding GameList}" IsEditable="False" Margin="105,0,0,0.333" Width="236" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnJoin" Grid.Row="1" HorizontalAlignment="Center" Padding="5" Margin="136,10,118.333,110" Width="89" Click="btnJoin_Click">Join Game</Button>
+        <controls:DefinePlay x:Name="UserControl" HorizontalAlignment="Left" Height="105" Margin="10,46,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Grid.ColumnSpan="2"/>
 
+        <Button x:Name="btnStart" HorizontalAlignment="Center" Click="btnStart_Click" Margin="136,17.333,118.333,9.667" Padding="5" Width="89" RenderTransformOrigin="0.464,-1.806" Grid.Row="3">Start Game</Button>
         <!--<controls:DefinePlay x:Name="definePlay" Margin="0,48.667,0.333,-90.333" Grid.ColumnSpan="2" Grid.Row="1" Loaded="definePlay_Loaded"/>-->
 
     </Grid>
