--- a/SearchAlgorithmsLib/GUI/View/SettingsWindow.xaml
+++ b/SearchAlgorithmsLib/GUI/View/SettingsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI.View"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="210" Width="360">
+        Title="SettingsWindow" Height="210" Width="360" ResizeMode="CanMinimize">
     <Grid TextBlock.FontSize="14" Margin="0,0,0.333,5.333">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
