--- a/SearchAlgorithmsLib/GUI/View/SinglePlayerMenu.xaml
+++ b/SearchAlgorithmsLib/GUI/View/SinglePlayerMenu.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GUI.View"
         xmlns:controls="clr-namespace:GUI.Controls"
         mc:Ignorable="d"
-        Title="SinglePlayerMenu" Height="191" Width="350">
+        Title="SinglePlayerMenu" Height="191" Width="350" ResizeMode="CanMinimize">
     <Grid>
         <controls:DefinePlay x:Name="UserControl" Margin="0,0,0,45"/>
         <Button x:Name="btnStart" HorizontalAlignment="Center" Click="btnStart_Click" Margin="136,110,123.333,9.667" Padding="5" Width="84">Start Game</Button>
