--- a/SearchAlgorithmsLib/GUI/View/WaitingWindow.xaml
+++ b/SearchAlgorithmsLib/GUI/View/WaitingWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI.View"
         mc:Ignorable="d"
-        Title="WaitingWindow" Height="300" Width="300">
+        Title="WaitingWindow" Height="300" Width="300" ResizeMode="CanMinimize">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="../Images/waiting.jpg"/>
